--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@stripe/stripe-js": "^7.3.0",
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
