--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@stripe/stripe-js": "^7.3.0",
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.4",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0"
   },
